--- a/Unidade 03/Laboratorio 02.ipynb
+++ b/Unidade 03/Laboratorio 02.ipynb
@@ -5,7 +5,7 @@
    "id": "d1222759-af8f-4a46-bdd3-18a27c1317a7",
    "metadata": {},
    "source": [
-    "Pseudocódigo 1: Área de um paralelograma"
+    "##  **Pseudocódigo 1:** Área de um paralelograma"
    ]
   },
   {
@@ -13,11 +13,19 @@
    "id": "43590180-8ec8-4831-bb0d-0c73efc606e0",
    "metadata": {},
    "source": [
-    "variavel altura, largura, area\n",
-    "solicite ao usuário altura\n",
-    "solicite ao usuário largura\n",
-    "area = largura * altura\n",
+    "variavel altura, largura, area  \n",
+    "solicite ao usuário altura  \n",
+    "solicite ao usuário largura  \n",
+    "area = largura * altura  \n",
     "imprima area"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cfb60d37",
+   "metadata": {},
+   "source": [
+    "### **Convertendo para Python**"
    ]
   },
   {
@@ -27,7 +35,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Digite a  altura:  10\n"
@@ -45,7 +53,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Digite a largura:  5\n"
@@ -79,7 +87,7 @@
    "id": "a8155130-0903-42ed-a9b9-01b24b8ee761",
    "metadata": {},
    "source": [
-    "Pseudocódigo 2: Calculadora Simples"
+    "## **Pseudocódigo 2:** Calculadora Simples"
    ]
   },
   {
@@ -87,21 +95,29 @@
    "id": "19e713dc-d8f3-4ec7-920d-c97ec88ba453",
    "metadata": {},
    "source": [
-    "solicite ao usuario o primeiro numero\n",
-    "solicite ao usuario o segundo numero\n",
-    "solicite o usuario a operacao\n",
-    "    se operacao for soma\n",
-    "        soma = primeiro numero + segundo numero\n",
-    "        imprima soma\n",
-    "    se operacao for subtracao\n",
-    "        subtracao = primeiro numero - segundo numero\n",
-    "        imprima subtracao\n",
-    "    se operacao for multiplicacao\n",
-    "        multiplicacao = primeiro numero * segundo numero\n",
-    "        imprima multiplicacao\n",
-    "    se operacao for divisao\n",
-    "        divisao = primeiro numero / segundo numero\n",
-    "        imprima divisao"
+    "solicite ao usuario o primeiro numero  \n",
+    "solicite ao usuario o segundo numero  \n",
+    "solicite o usuario a operacao  \n",
+    "    se operacao for soma  \n",
+    "        soma = primeiro numero + segundo numero  \n",
+    "        imprima soma  \n",
+    "    se operacao for subtracao  \n",
+    "        subtracao = primeiro numero - segundo numero  \n",
+    "        imprima subtracao  \n",
+    "    se operacao for multiplicacao  \n",
+    "        multiplicacao = primeiro numero * segundo numero  \n",
+    "        imprima multiplicacao  \n",
+    "    se operacao for divisao  \n",
+    "        divisao = primeiro numero / segundo numero  \n",
+    "        imprima divisao  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9c3614f",
+   "metadata": {},
+   "source": [
+    "### **Convertendo para Python**"
    ]
   },
   {
@@ -111,7 +127,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Digite o primeiro numero:  5\n"
@@ -124,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 360,
    "id": "89987575-0a0c-4b03-bd09-a0f7005cf79d",
    "metadata": {},
    "outputs": [],
@@ -164,7 +180,7 @@
    "id": "490b086b-0db2-4a09-8882-2b23cedd1b02",
    "metadata": {},
    "source": [
-    "Pseudocódigo 3 -  BubbleSort"
+    "## **Pseudocódigo 3:**  BubbleSort"
    ]
   },
   {
@@ -172,16 +188,24 @@
    "id": "1edbe2d0-5fd5-4ab4-a902-02153d21a78f",
    "metadata": {},
    "source": [
-    "numero2 = tamanho do array\n",
-    "enquanto numero2 for maior que zero \n",
-    "    numero = 0\n",
-    "    enquanto numero for menor que numero2\n",
-    "        se objeto do array na posicao numero for maior que objeto do array na posicao numero2\n",
-    "            temporario = objeto do array na posicao numero2\n",
-    "            objeto do array na posicao numero2 = objeto do array na posicao numero\n",
-    "            objeto do array na posicao numero = temporario\n",
-    "        numero aumenta 1\n",
-    "    numero 2 diminui 1"
+    "numero2 = tamanho do array  \n",
+    "enquanto numero2 for maior que zero  \n",
+    "    numero = 0  \n",
+    "    enquanto numero for menor que numero2  \n",
+    "        se objeto do array na posicao numero for maior que objeto do array na posicao numero2  \n",
+    "            temporario = objeto do array na posicao numero2  \n",
+    "            objeto do array na posicao numero2 = objeto do array na posicao numero  \n",
+    "            objeto do array na posicao numero = temporario  \n",
+    "        numero aumenta 1  \n",
+    "    numero 2 diminui 1  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3ce3c0f",
+   "metadata": {},
+   "source": [
+    "### **Convertendo para Python**"
    ]
   },
   {
@@ -211,6 +235,14 @@
     "        numero += 1\n",
     "    numero2-=1\n",
     "print(array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fa69204",
+   "metadata": {},
+   "source": [
+    "### **Versão compacta**"
    ]
   },
   {
@@ -246,14 +278,6 @@
    "source": [
     "print(bubble_sort(array))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a67d384-9bed-451b-9035-7fb7841f0fce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
